update: login logic